19990621-13:27 CET Victor Szel <info@szelvesz.hu>
  * source/compiler/harbour.y
    GCC warning fixed.
  * source/contrib/genobj.c removed, as
    suggested by "Antonio Linares" <alinares@fivetech.com>

19990621-13:27 Alexander Kresin
 updated:
 * source\hbpp\hbpp.c
 * source\hbpp\buildgcc.bat
 * source\hbpp\makefile.b16
 * source\hbpp\makefile.b32
 * source\compiler\harbour.l
  Now keywords.prg compiles Ok.
  Updated makefiles for standalone version of preprocessor.
  From harbour.l removed all stuff related to early implementation of
   preprocessor functionality.

19990621-11:50 CET Victor Szel <info@szelvesz.hu>
  * source/compiler/harbour.y
    Some old PCODE name changed to new in
    debug_msg messages.

19990621-04:04 CET Victor Szel <info@szelvesz.hu>
  * include/errorapi.h - Some additions, note
    the copyright message at the beginning, as the
    final text gets done, we should put similar header
    to each file.
  ! include/hbsetup.h - USE_GTAPI was mistakenly 
    left defined.
  + include/errorapi.h
    include/error.api
    source/rtl/errorapi.c
    The rest of the ERROR API functions
    implemented.
.   hb_errorRT_BASE() implemented.
  + doc/hdr_tpl.txt - added templates for
    file and function headers.

19990621-01:30 CET Victor Szel <info@szelvesz.hu>
  * whatsnew.txt moved to doc/ directory.
  * doc/hrb.faq renamed to hrb_faq.txt
  + tests/broken/vec1.prg readded.

19990621-00:57 CET Victor Szel <info@szelvesz.hu>
  * include/*.h
    Some code beatifying.
  * include/types.h/_PCOUNT renamed back to PCOUNT
  + IT_MEMOFLAG and IT_MEMO types added to 
    include/extend.h and include/types.h
  * TEST.CH moved from /include to tests/working
  ! include/gt.api - _gtBox double define fixed.
  ! include/extend.api - _param removed since it's
    not standard Clipper.
  ! include/item.api - Fixed obsolete references
    to Array*() functions changed since to hb_array*()
  ! source/rtl/console/hb_setpos() - Fixed one warning.
