@@ -1,64 +1,32 @@
 #
-
 # $Id$
-
 #
-
-
 
 ROOT = ../../
 
-
-
 YACC_SOURCE=harbour.y
 
-
-
 YACC_HEADERS=\
-
 	compiler.h \
-
 	hbsetup.h \
-
 	pcode.h \
-
 	types.h \
-
 	hberrors.h \
-
 	hbpp.h
-
-
 
 LEX_SOURCE=harbour.l
 
-
-
 LEX_HEADERS=\
-
 	hbsetup.h \
-
 	hberrors.h \
-
 	types.h
 
-
-
 C_SOURCES=\
-
 	genobj32.c \
-
-
 
 C_MAIN=harbour.c
 
-
-
 LIBS=\
-
 	hbpp \
 
-
-
 include $(TOP)$(ROOT)config/bin.cf
-
